# cuprum

./: .gitignore  .markdownlint-cli2.jsonc  .pyscn.toml  AGENTS.md  CHANGELOG.md  Makefile  README.md  conftest.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-wheels.yml  ci.yml  coverage-main.yml  dependabot-automerge.yml  get-codescene-sha.yml  mutation-testing.yml  release.yml
.rules/: python-return.md
benchmarks/: README.md  __init__.py  _benchmark_type_validators.py  _benchmark_types.py  _test_constants.py  _validation.py  benchmark_profile.py  ci_benchmark_ratchet_profile.py  comparison_analysis.py  comparison_report.py  deterministic_b64_fixture.py  fetch_main_benchmark_baseline.py  pipeline_throughput.py  pipeline_throughput_runner.py  pipeline_throughput_scenarios.py  pipeline_worker.py  profile_tee_hotpath.py  python_vs_rust_comparison_report.py  ratchet_rust_performance.py  ratchet_types.py  sinks.py  summarize_folded.py  tee_profile_driver.py  tee_profile_profilers.py  tee_profile_scenarios.py  tee_profile_worker.py  test_stream_microbenchmarks.py
cuprum/: __init__.py  _backend.py  _constants.py  _meta.py  _observability.py  _pipeline_config.py  _pipeline_internals.py  _pipeline_stage_streams.py  _pipeline_streams.py  _pipeline_types.py  _pipeline_wait.py  _process_lifecycle.py  _rust_backend.py  _streams.py  _streams_rs.py  _subprocess_context.py  _subprocess_execution.py  _subprocess_stdin.py  _subprocess_timeout.py  _testing.py  catalogue.py  concurrent.py  context.py  events.py  logging_hooks.py  program.py  rust.py  sh.py
cuprum/adapters/: __init__.py  _support.py  logging_adapter.py  metrics_adapter.py  tracing_adapter.py  tracing_memory.py
cuprum/builders/: __init__.py  args.py  git.py  rsync.py  tar.py
cuprum/context/: __init__.py  core.py  env_overlay.py  registration.py  state.py
cuprum/unittests/: _adapter_test_support.py  _cqrs_fixtures.py  _tee_profile_backend_support.py  _tee_profile_concurrency_support.py  _tee_profile_signalling_lock.py  _tee_profile_worker_test_helpers.py  conftest.py  strategies.py  test_adapter_projection.py  test_adapters.py  test_backend.py  test_benchmark_ci_ratchet.py  test_benchmark_comparison_report.py  test_benchmark_suite.py  test_build_final_results_property.py  test_builder_library.py  test_builder_property_based.py  test_catalogue.py  test_catalogue_property_based.py  test_ci_benchmark_ratchet_profile.py  test_concurrency.py  test_context.py  test_cqrs_helpers.py  test_cqrs_hook_behaviour.py  test_cqrs_runtime_behaviour.py  test_env_context.py  test_env_context_properties.py  test_fetch_main_benchmark_baseline.py  test_fixture_generation.py  test_folded_summary.py  test_line_splitting.py  test_logging_adapter.py  test_logging_hook.py  test_manylinux_container_ref_properties.py  test_maturin_build.py  test_metrics_adapter.py  test_observe.py  test_performance_guidance_docs.py  test_pipeline.py  test_pipeline_output_options.py  (+38 more)
docs/: adr-001-rust-extension.md  adr-002-additional-rust-components.md  adr-003-two-tier-python-linting.md  adr-004-interrogate-docstring-gate.md  adr-005-unified-rust-availability-probe.md  adr-006-context-package-split.md  adr-006-subprocess-execution-module-boundaries.md  adr-007-subprocess-execution-module-boundaries.md  contents.md  cuprum-design.md  developers-guide.md  documentation-style-guide.md  local-validation-of-github-actions-with-act-and-pytest.md  pyscn-findings.md  repository-layout.md  roadmap.md  scripting-standards.md  tee-hotpath-profiling-baseline-2026-06-12.md  users-guide.md
docs/debugging/: debugging-plan-2026-07-18-hypothesis-too-slow.md  debugging-plan-2026-07-19T17-32-12Z.md  debugging-plan-20260715-python-315-unused-snapshot.md
docs/execplans/: 2-3-1-multiple-safe-cmd-instances.md  3-1-1-core-builder-set-for-common-tools.md  4-1-1-performance-extension-foundation.md  4-2-1-rust-pump-stream.md  4-2-2-rust-consume-stream.md  4-2-3-add-linux-specific-splice-code-path.md  4-2-4-backend-dispatcher.md  4-3-1-parametrise-existing-stream-unit-tests.md  4-3-1-parametrize-existing-stream-unit-tests.md  4-3-2-behavioural parity tests.md  4-3-2-pathway-selection-integration-tests.md  4-3-4-property-based-tests.md  4-4-1-pytest-benchmark-suite.md  4-4-2-benchmark-scenarios.md  4-4-3-ratchet-rust-performance.md  4-4-4-benchmark-comparison-report.md  4-5-2-add-performance-guidance-to-users-guide.md  4-5-3-prerequisite-and-troubleshooting-documentation.md  cli-output-clarity.md
experiments/: pandalump-token-pr.txt
rust/: Cargo.toml  Makefile  dylint.toml
rust/cuprum-rust/: Cargo.toml  pyproject.toml
rust/cuprum-rust/src/: errors.rs  fd_tests.rs  io_utils.rs  lib.rs  lib_tests.rs  splice.rs  test_support.rs  utf8.rs
rust/cuprum-rust/src/splice/: mod.rs  tests.rs
rust/cuprum-rust/tests/: compile_tests.rs
rust/cuprum-rust/tests/ui/fail/: const_availability_export.rs  const_availability_export.stderr  invalid_pymodule_return.rs  invalid_pymodule_return.stderr
rust/cuprum-rust/tests/ui/pass/: pyo3_pymodule.rs  pyo3_signature.rs
rust/tools/: cc-single-thread-linker
scripts/: typos_rollout.py
test-wheelhouse/: cuprum-0.1.0-cp313-cp313-manylinux_2_28_x86_64.whl
tests/: conftest.py  test_workflow_contract.py
tests/behaviour/: test_backend_dispatcher_behaviour.py  test_benchmark_ci_ratchet_behaviour.py  test_benchmark_comparison_report_behaviour.py  test_benchmark_suite_behaviour.py  test_builder_library_behaviour.py  test_catalogue_behaviour.py  test_concurrency_helper.py  test_context_hooks.py  test_env_context_behaviour.py  test_execution_runtime.py  test_logging_hook_behaviour.py  test_performance_guidance_docs_behaviour.py  test_pipeline_execution.py  test_prerequisite_docs_behaviour.py  test_rust_extension_behaviour.py  test_rust_streams_behaviour.py  test_stream_backend_pipeline.py  test_stream_fidelity.py  test_stream_parity_behaviour.py  test_stream_property_preservation_behaviour.py  test_structured_events.py  test_telemetry_adapters.py
tests/features/: backend_dispatcher.feature  benchmark_ci_ratchet.feature  (+20 more)
(+21 files in other folders)
