[project]
name = "cuprum"
# When updating version, also update rust/cuprum-rust/Cargo.toml to match;
# CI verifies metadata parity between pure Python and native wheels.
version = "0.1.0"
description = "cuprum package"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "ISC" }
authors = [{ name = "Payton McIntosh", email = "pmcintosh@df12.net" }]
dependencies = []

[project.urls]
Homepage = "https://df12.studio/docs.html"
Repository = "https://github.com/leynos/cuprum"

[dependency-groups]
dev = [
    "crosshair-tool",
    "hypothesis",
    "hypothesis-crosshair",
    "interrogate",
    "pytest",
    "pytest-benchmark",
    "pytest-bdd",
    "ruff",
    "pyright",
    "pytest-timeout",
    "pytest-xdist",
    "syrupy",
    "ty",
    # Keep in sync with .github/workflows/build-wheels.yml and
    # .github/actions/build-wheels/action.yml.
    "maturin==1.13.3",
    "pyyaml>=6.0.3",
]

[tool.ruff]
line-length = 88
preview = true
target-version = "py312"

[tool.ruff.lint]
select = [
    "F",        # Pyflakes rules
    "W",        # PyCodeStyle warnings
    "E",        # PyCodeStyle errors
    "I",        # Sort imports properly
    "UP",       # Warn if certain things can changed due to newer Python versions
    "C4",       # Catch incorrect use of comprehensions, dict, list, etc
    "FA",       # Enforce from __future__ import annotations
    "ISC",      # Good use of string concatenation
    "ICN",      # Use common import conventions
    "RET",      # Good return practices
    "SIM",      # Common simplification rules
    "TID",      # Some good import practices
    "TC",       # Enforce importing certain types in a TYPE_CHECKING block
    "PTH",      # Use pathlib instead of os.path
    # "TD" lints disabled: they require author/issue links on FIXME/TODO tags,
    # which contradicts the project convention of bare FIXME: on noqa comments.
    # "TD",
    "A",        # detect shadowed builtins
    "BLE",      # disallow catch-all exceptions
    "S",        # disallow things like "exec"; also restricts "assert" but I just NOQA it when I really need it
    "DTZ",      # require strict timezone manipulation with datetime
    "FBT",      # detect boolean traps
    "N",        # enforce naming conventions, e.g. ClassName vs function_name
    "FURB",
    "B",
    "RUF",
    "LOG",
    "Q",
    "PT",
    "RSE",
    "PERF",
    "TRY",
    "D",
    "ANN",
    "C90",
    "PLR",
    "PLE4703",
    "PLR0202",
    "PLR0203",
    "PLR0914",
    "PLR0916",
    "PLR1702",
    "PLR6104",
    "PLR6201",
    "PLR6301",
    "PLW0108",
    "RUF036",
    "RUF053",
    "RUF055",
    "RUF064",
    "RUF066",
]
extend-ignore = [
    "D203",  # Conflicts with D211; prefer enforcing no blank line before class docstring.
    "D213",  # Conflicts with D212; keep summary on the first line.
]

[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = ["S101", "PLR0913", "PLR0917", "PLR2004", "PLR6301"]
# Test scaffolding modules (shared helpers imported by test_*.py) get the same
# allowances as the tests they support; they use bare ``assert`` for fixtures.
"cuprum/unittests/*_test_helpers.py" = ["S101", "PLR0913", "PLR0917", "PLR2004", "PLR6301"]
"cuprum/unittests/_tee_profile_concurrency_support.py" = ["S101", "PLR0913", "PLR0917", "PLR2004", "PLR6301"]
"tests/steps/*.py" = ["S101", "PLR0913", "PLR0917", "PLR2004", "PLR6301"]

[tool.ruff.lint.flake8-import-conventions]
# Declare the banned `from` imports.
banned-from = [
    "typing",
    "datetime",
    "collections.abc",
    "dataclasses",
    "enum",
    "unittest.mock",
    "msgspec",
]

[tool.ruff.lint.flake8-import-conventions.aliases]
# Declare the default aliases.
altair = "alt"
"matplotlib.pyplot" = "plt"
numpy = "np"
pandas = "pd"
seaborn = "sns"
scipy = "sp"
"collections.abc" = "cabc"
datetime = "dt"
"unittest.mock" = "mock"
"msgspec.json" = "msjson"
typing = "typ"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"typing.AbstractSet".msg = "Use collections.abc.Set instead of deprecated typing generics."
"typing.AsyncContextManager".msg = "Use contextlib.AbstractAsyncContextManager instead of deprecated typing generics."
"typing.AsyncGenerator".msg = "Use collections.abc.AsyncGenerator instead of deprecated typing generics."
"typing.AsyncIterable".msg = "Use collections.abc.AsyncIterable instead of deprecated typing generics."
"typing.AsyncIterator".msg = "Use collections.abc.AsyncIterator instead of deprecated typing generics."
"typing.Awaitable".msg = "Use collections.abc.Awaitable instead of deprecated typing generics."
"typing.Callable".msg = "Use collections.abc.Callable instead of deprecated typing generics."
"typing.ChainMap".msg = "Use collections.ChainMap instead of deprecated typing generics."
"typing.Collection".msg = "Use collections.abc.Collection instead of deprecated typing generics."
"typing.Container".msg = "Use collections.abc.Container instead of deprecated typing generics."
"typing.ContextManager".msg = "Use contextlib.AbstractContextManager instead of deprecated typing generics."
"typing.Coroutine".msg = "Use collections.abc.Coroutine instead of deprecated typing generics."
"typing.Counter".msg = "Use collections.Counter instead of deprecated typing generics."
"typing.DefaultDict".msg = "Use collections.defaultdict instead of deprecated typing generics."
"typing.Deque".msg = "Use collections.deque instead of deprecated typing generics."
"typing.Dict".msg = "Use dict instead of deprecated typing generics."
"typing.FrozenSet".msg = "Use frozenset instead of deprecated typing generics."
"typing.Generator".msg = "Use collections.abc.Generator instead of deprecated typing generics."
"typing.ItemsView".msg = "Use collections.abc.ItemsView instead of deprecated typing generics."
"typing.Iterable".msg = "Use collections.abc.Iterable instead of deprecated typing generics."
"typing.Iterator".msg = "Use collections.abc.Iterator instead of deprecated typing generics."
"typing.KeysView".msg = "Use collections.abc.KeysView instead of deprecated typing generics."
"typing.List".msg = "Use list instead of deprecated typing generics."
"typing.Mapping".msg = "Use collections.abc.Mapping instead of deprecated typing generics."
"typing.Match".msg = "Use re.Match instead of deprecated typing generics."
"typing.MutableMapping".msg = "Use collections.abc.MutableMapping instead of deprecated typing generics."
"typing.MutableSequence".msg = "Use collections.abc.MutableSequence instead of deprecated typing generics."
"typing.MutableSet".msg = "Use collections.abc.MutableSet instead of deprecated typing generics."
"typing.OrderedDict".msg = "Use collections.OrderedDict instead of deprecated typing generics."
"typing.Pattern".msg = "Use re.Pattern instead of deprecated typing generics."
"typing.Reversible".msg = "Use collections.abc.Reversible instead of deprecated typing generics."
"typing.Sequence".msg = "Use collections.abc.Sequence instead of deprecated typing generics."
"typing.Set".msg = "Use set instead of deprecated typing generics."
"typing.Tuple".msg = "Use tuple instead of deprecated typing generics."
"typing.Type".msg = "Use type instead of deprecated typing generics."
"typing.ValuesView".msg = "Use collections.abc.ValuesView instead of deprecated typing generics."

[tool.ruff.lint.pydocstyle]
# Enforce NumPy docstring style
convention = "numpy"

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.ruff.lint.pylint]
max-args = 4
max-bool-expr = 2
max-locals = 10

[tool.pylint.main]
# Expand directory targets like tests even when they are not packages.
recursive = true
# Match the project file-size ceiling enforced during review.
max-module-lines = 400

[tool.pylint.design]
# Keep function call surfaces small enough to understand without memorising
# positional argument order.
max-args = 4
# The new Pylint gate complements Ruff's stricter PLR0914 threshold without
# forcing broad refactors while introducing the additional rule families below.
max-locals = 20
# Use Pylint's statement-count proxy for function length; Pylint 4 does not
# expose a distinct physical-lines-per-function option.
max-statements = 70
# Keep positional call surfaces aligned with Ruff's existing argument limit.
max-positional-arguments = 4

[tool.pylint."messages control"]
# Keep this Pylint pass focused on the explicitly selected messages.
disable = [
    "all",
    # Managed PyPy can lag the project Python version; keep PyPy-backed Pylint
    # useful on files it can parse.
    "syntax-error",
]
enable = [
    # Logging format safety.
    "logging-format-interpolation",
    "logging-format-truncated",
    "logging-fstring-interpolation",
    "logging-not-lazy",
    "logging-too-few-args",
    "logging-too-many-args",
    "logging-unsupported-format",

    # Pattern matching correctness and readability.
    "bare-name-capture-pattern",
    "invalid-match-args-definition",
    "match-class-bind-self",
    "match-class-positional-attributes",
    "multiple-class-sub-patterns",
    "too-many-positional-sub-patterns",

    # Control-flow simplification.
    "chained-comparison",
    "condition-evals-to-constant",
    "consider-merging-isinstance",
    "consider-swap-variables",
    "consider-using-in",
    "consider-using-max-builtin",
    "consider-using-min-builtin",
    "consider-using-sys-exit",
    "consider-using-ternary",
    "inconsistent-return-statements",
    "no-else-break",
    "no-else-continue",
    "no-else-raise",
    "no-else-return",
    "redefined-argument-from-local",
    "simplifiable-condition",
    "simplifiable-if-expression",
    "simplifiable-if-statement",
    "simplify-boolean-expression",
    "stop-iteration-return",
    "super-with-arguments",
    "trailing-comma-tuple",
    "unnecessary-negation",
    "useless-return",

    # Collection and iterator idioms.
    "consider-iterating-dictionary",
    "consider-using-dict-comprehension",
    "consider-using-dict-items",
    "consider-using-enumerate",
    "consider-using-f-string",
    "consider-using-generator",
    "consider-using-get",
    "consider-using-join",
    "consider-using-set-comprehension",
    "unnecessary-comprehension",
    "unnecessary-dict-index-lookup",
    "unnecessary-list-index-lookup",
    "use-a-generator",
    "use-dict-literal",
    "use-implicit-booleaness-not-comparison",
    "use-implicit-booleaness-not-comparison-to-string",
    "use-implicit-booleaness-not-len",
    "use-list-literal",
    "use-maxsplit-arg",
    "use-sequence-for-iteration",
    "use-yield-from",

    # Runtime APIs, resources, and compatibility hazards.
    "bad-open-mode",
    "bad-thread-instantiation",
    "boolean-datetime",
    "consider-using-with",
    "deprecated-argument",
    "deprecated-attribute",
    "deprecated-class",
    "deprecated-decorator",
    "deprecated-method",
    "forgotten-debug-statement",
    "invalid-envvar-default",
    "invalid-envvar-value",
    "method-cache-max-size-none",
    "redundant-unittest-assert",
    "shallow-copy-environ",
    "singledispatch-method",
    "singledispatchmethod-function",
    "subprocess-popen-preexec-fn",
    "subprocess-run-check",
    "unnecessary-dunder-call",
    "unnecessary-ellipsis",
    "unspecified-encoding",

    # Source layout and text hygiene.
    "missing-final-newline",
    "mixed-line-endings",
    "superfluous-parens",
    "trailing-newlines",
    "trailing-whitespace",
    "unexpected-line-ending-format",

    # Mutation during iteration.
    "modified-iterating-dict",
    "modified-iterating-list",
    "modified-iterating-set",

    # Structural complexity limits.
    "too-many-arguments",
    "too-many-boolean-expressions",
    "too-many-branches",
    "too-many-lines",
    "too-many-locals",
    "too-many-nested-blocks",
    "too-many-positional-arguments",
    "too-many-public-methods",
    "too-many-statements",
]

[tool.pytest.ini_options]
# Tests automatically killed after seconds elapsed
timeout = 30

[tool.mutmut]
# Flat layout: the package lives at the repository root.
source_paths = ["cuprum/"]
# The suite is split between tests/ and the in-package unit tests.
pytest_add_cli_args_test_selection = ["tests/", "cuprum/unittests/"]
# cuprum/unittests/ is the in-package unit-test suite and
# cuprum/_testing.py is a test-only re-export surface for internal
# helpers; mutants in either would be noise.
do_not_mutate = ["cuprum/unittests/*", "cuprum/_testing.py"]
# mutmut runs pytest from mutants/; copy the assets the suite resolves
# relative to the repository root: the shared root conftest, the
# benchmarks package imported by the benchmark and profiling tests, the
# documentation exercised by the docs contract tests, the workflow and
# action files read by the maturin pin and ratchet tests, and the Rust
# tree the wheel-build snapshot test builds from (listed piecewise so a
# local rust/target/ build directory is never copied; the crate
# directory precedes the loose workspace files because mutmut creates
# parent directories only when copying directories).
also_copy = [
    "conftest.py",
    "benchmarks/",
    "docs/",
    ".github/",
    "rust/cuprum-rust/",
    "rust/Cargo.toml",
    "rust/Cargo.lock",
    "rust/dylint.toml",
]

[tool.uv]
package = true

[build-system]
requires = ["uv_build>=0.9.18,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.maturin]
bindings = "pyo3"
manifest-path = "rust/cuprum-rust/Cargo.toml"
module-name = "cuprum._rust_backend_native"
python-source = "."
