[package]
name = "cuprum-rust"
version = "0.1.0"
edition = "2024"
license = "ISC"
description = "Optional Rust extension for cuprum stream operations"
publish = false

[lib]
name = "_rust_backend_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.29.0", features = ["extension-module"] }
thiserror = "2.0.17"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
proptest = "1"
trybuild = { version = "1", features = ["diff"] }

[lints]
workspace = true
