[package]
name = "cuprum-rust"
version = "0.1.0"
edition = "2024"
license = "ISC"
description = "Optional Rust extension for cuprum stream operations"
publish = false

[lib]
name = "_rust_backend_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.3", features = ["extension-module"] }
thiserror = "2.0.18"

[target.'cfg(unix)'.dependencies]
libc = "0.2.186"

[dev-dependencies]
proptest = "1.11.0"
rstest = "0.26.1"
trybuild = { version = "1.0.116", features = ["diff"] }

[lints]
workspace = true
