[package]
name = "cuprum-rust"
version = "0.1.0"
edition = "2024"
license = "ISC"
description = "Optional Rust extension for cuprum stream operations"
publish = false

[lib]
name = "_rust_backend_native"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.29.0", features = ["extension-module"] }
thiserror = "2.0.18"
tracing = { version = "0.1.44", default-features = false, features = ["std"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.186"

[dev-dependencies]
proptest = "1.11.0"
rstest = "0.26.1"
tempfile = "3.27.0"
trybuild = { version = "1.0.116", features = ["diff"] }

[lints]
workspace = true
