[build-system]
# maturin 1.6+ required for stable module-name handling in mixed Python/Rust
# projects; aligns with MATURIN_VERSION in .github/workflows/build-wheels.yml
requires = ["maturin>=1.6,<2"]
build-backend = "maturin"

[project]
name = "cuprum"
# Version is sourced from rust/cuprum-rust/Cargo.toml via maturin; keep
# Cargo.toml version in sync with root pyproject.toml when releasing.
dynamic = ["version"]
description = "Optional Rust extension for cuprum stream operations"
readme = "../../README.md"
requires-python = ">=3.12"
license = { text = "ISC" }
authors = [{ name = "Payton McIntosh", email = "pmcintosh@df12.net" }]

[tool.maturin]
bindings = "pyo3"
module-name = "cuprum._rust_backend_native"
python-source = "../.."
